Refactoring query to filter for city using a more efficient method in Objection.js (join table method using the option .eagerAlgorithm(Doctor.JoinEagerAlgorithm) )

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,7 +5,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>ToDo</title>
+    <title>Find a GP in BC</title>
     <link rel="stylesheet" href="/css/style.css">
   </head>
   <body>
